--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "mashape/unirest-php": "^3.0"
+        "mashape/unirest-php": "^3.0",
+        "sunra/php-simple-html-dom-parser": "v1.5.0"
     }
 }
