--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "mashape/unirest-php": "^3.0",
         "sunra/php-simple-html-dom-parser": "v1.5.0",
-        "j7mbo/twitter-api-php": "dev-master"
+        "j7mbo/twitter-api-php": "dev-master",
+        "cosenary/simple-php-cache": "dev-master"
     }
 }
